fix(travel leg): fix missing colours for air, rail and water transport type
affects: @entur/tokens, @entur/travel

--- a/packages/travel/src/componentColors.scss
+++ b/packages/travel/src/componentColors.scss
@@ -33,6 +33,7 @@
   --components-travel-travelheader-contrast-text: #{$text-light};
   --components-travel-travelheader-standard-stroke-line: #{$stroke-highlight};
   --components-travel-travelheader-standard-text: #{$text-accent};
+  --components-travel-travelleg-contrast-air: #{$contrast-plane};
   --components-travel-travelleg-contrast-airportlinkbus: #{$contrast-airportlinkbus};
   --components-travel-travelleg-contrast-airportlinkrail: #{$contrast-airportlinkrail};
   --components-travel-travelleg-contrast-bicycle: #{$contrast-bicycle};
@@ -47,10 +48,13 @@
   --components-travel-travelleg-contrast-metro: #{$contrast-metro};
   --components-travel-travelleg-contrast-mobility: #{$contrast-mobility};
   --components-travel-travelleg-contrast-plane: #{$contrast-plane};
+  --components-travel-travelleg-contrast-rail: #{$contrast-train};
   --components-travel-travelleg-contrast-taxi: #{$contrast-taxi};
   --components-travel-travelleg-contrast-train: #{$contrast-train};
   --components-travel-travelleg-contrast-tram: #{$contrast-tram};
   --components-travel-travelleg-contrast-walk: #{$contrast-walk};
+  --components-travel-travelleg-contrast-water: #{$contrast-carferry};
+  --components-travel-travelleg-standard-air: #{$standard-plane};
   --components-travel-travelleg-standard-airportlinkbus: #{$standard-airportlinkbus};
   --components-travel-travelleg-standard-airportlinkrail: #{$standard-airportlinkrail};
   --components-travel-travelleg-standard-bicycle: #{$standard-bicycle};
@@ -65,10 +69,12 @@
   --components-travel-travelleg-standard-metro: #{$standard-metro};
   --components-travel-travelleg-standard-mobility: #{$standard-mobility};
   --components-travel-travelleg-standard-plane: #{$standard-plane};
+  --components-travel-travelleg-standard-rail: #{$standard-train};
   --components-travel-travelleg-standard-taxi: #{$standard-taxi};
   --components-travel-travelleg-standard-train: #{$standard-train};
   --components-travel-travelleg-standard-tram: #{$standard-tram};
   --components-travel-travelleg-standard-walk: #{$standard-walk};
+  --components-travel-travelleg-standard-water: #{$standard-carferry};
   --components-travel-travelswitch-contrast-backgroundfalse: #{$fill-secondary-hover-contrast};
   --components-travel-travelswitch-contrast-backgroundtrue-air: #{$contrast-airportlinkbus};
   --components-travel-travelswitch-contrast-backgroundtrue-bicycle: #{$contrast-bicycle};
@@ -327,6 +333,7 @@
   --components-travel-travelheader-contrast-text: #{$text-lightalt};
   --components-travel-travelheader-standard-stroke-line: #{$stroke-highlightalt};
   --components-travel-travelheader-standard-text: #{$text-lightalt};
+  --components-travel-travelleg-contrast-air: #{$dark-plane};
   --components-travel-travelleg-contrast-airportlinkbus: #{$dark-airportlinkbus};
   --components-travel-travelleg-contrast-airportlinkrail: #{$dark-airportlinkrail};
   --components-travel-travelleg-contrast-bicycle: #{$dark-bicycle};
@@ -341,10 +348,13 @@
   --components-travel-travelleg-contrast-metro: #{$dark-metro};
   --components-travel-travelleg-contrast-mobility: #{$dark-mobility};
   --components-travel-travelleg-contrast-plane: #{$dark-plane};
+  --components-travel-travelleg-contrast-rail: #{$dark-train};
   --components-travel-travelleg-contrast-taxi: #{$dark-taxi};
   --components-travel-travelleg-contrast-train: #{$dark-train};
   --components-travel-travelleg-contrast-tram: #{$dark-tram};
   --components-travel-travelleg-contrast-walk: #{$dark-walk};
+  --components-travel-travelleg-contrast-water: #{$dark-carferry};
+  --components-travel-travelleg-standard-air: #{$dark-plane};
   --components-travel-travelleg-standard-airportlinkbus: #{$dark-airportlinkbus};
   --components-travel-travelleg-standard-airportlinkrail: #{$dark-airportlinkrail};
   --components-travel-travelleg-standard-bicycle: #{$dark-bicycle};
@@ -359,10 +369,12 @@
   --components-travel-travelleg-standard-metro: #{$dark-metro};
   --components-travel-travelleg-standard-mobility: #{$dark-mobility};
   --components-travel-travelleg-standard-plane: #{$dark-plane};
+  --components-travel-travelleg-standard-rail: #{$dark-train};
   --components-travel-travelleg-standard-taxi: #{$dark-taxi};
   --components-travel-travelleg-standard-train: #{$dark-train};
   --components-travel-travelleg-standard-tram: #{$dark-tram};
   --components-travel-travelleg-standard-walk: #{$dark-walk};
+  --components-travel-travelleg-standard-water: #{$dark-carferry};
   --components-travel-travelswitch-contrast-backgroundfalse: #{$fill-boolean-false-dark};
   --components-travel-travelswitch-contrast-backgroundtrue-air: #{$dark-airportlinkbus};
   --components-travel-travelswitch-contrast-backgroundtrue-bicycle: #{$dark-bicycle};
